--- a/MemBus.Tests/MemBus.Tests.csproj
+++ b/MemBus.Tests/MemBus.Tests.csproj
@@ -42,10 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Frame\AssertExtensions.cs" />
+    <Compile Include="Help\MockConfigurableBus.cs" />
     <Compile Include="Help\MockSubscription.cs" />
     <Compile Include="Help\SimpleResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Using_Composite_Subscription.cs" />
+    <Compile Include="Using_Configurations.cs" />
+    <Compile Include="Using_Publish_Pipeline_Members.cs" />
     <Compile Include="When_Resolving_Subscriptions.cs" />
   </ItemGroup>
   <ItemGroup>
