--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -39,12 +39,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bus.cs" />
     <Compile Include="CompositeResolver.cs" />
     <Compile Include="CompositeSubscription.cs" />
+    <Compile Include="PublishPipeline\FireAndForgetPublisher.cs" />
+    <Compile Include="PublishPipeline\IPublishPipelineMember.cs" />
     <Compile Include="ISubscription.cs" />
     <Compile Include="ISubscriptionResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PublishPipeline\ParallelPublisher.cs" />
+    <Compile Include="PublishPipeline\PublishToken.cs" />
+    <Compile Include="PublishPipeline\SequentialPublisher.cs" />
+    <Compile Include="Setup\BusSetup.cs" />
+    <Compile Include="Setup\DefaultSetup.cs" />
+    <Compile Include="Setup\IBusSetupConfigurator.cs" />
+    <Compile Include="Setup\IConfigurableBus.cs" />
+    <Compile Include="TableBasedResolver.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
