--- a/MemBus.Tests/MemBus.Tests.csproj
+++ b/MemBus.Tests/MemBus.Tests.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Moq">
       <HintPath>..\lib\Moq.dll</HintPath>
     </Reference>
@@ -47,11 +48,13 @@
     <Compile Include="Frame\AssertExtensions.cs" />
     <Compile Include="Frame\Helpers.cs" />
     <Compile Include="Help\MockSubscription.cs" />
+    <Compile Include="Help\SampleClass.cs" />
     <Compile Include="Help\SimpleResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Using_Composite_Subscription.cs" />
     <Compile Include="Using_Publish_Pipeline.cs" />
     <Compile Include="When_Resolving_Subscriptions.cs" />
+    <Compile Include="When_using_dynamics.cs" />
     <Compile Include="When_using_the_bus.cs" />
   </ItemGroup>
   <ItemGroup>
