--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -52,6 +52,7 @@
     <Compile Include="PublishPipeline\PublishPipeline.cs" />
     <Compile Include="PublishPipeline\PublishToken.cs" />
     <Compile Include="PublishPipeline\SequentialPublisher.cs" />
+    <Compile Include="RespondExtension.cs" />
     <Compile Include="Setup\AdHocConfigurator.cs" />
     <Compile Include="Setup\BusSetup.cs" />
     <Compile Include="Setup\DefaultSetup.cs" />
