--- a/MemBus.Tests/MemBus.Tests.csproj
+++ b/MemBus.Tests/MemBus.Tests.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Help\SampleClass.cs" />
     <Compile Include="Help\SimpleResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Using_Abstract_Automaton.cs" />
     <Compile Include="Using_Composite_Subscription.cs" />
     <Compile Include="Using_Publish_Pipeline.cs" />
     <Compile Include="When_Resolving_Subscriptions.cs" />
