Basic method subscription with user responsibility to get rid of subscription

--- a/MemBus.Tests/MemBus.Tests.csproj
+++ b/MemBus.Tests/MemBus.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Using_Abstract_Automaton.cs" />
     <Compile Include="Using_Composite_Subscription.cs" />
+    <Compile Include="Using_disposable_method_subscription.cs" />
     <Compile Include="Using_Publish_Pipeline.cs" />
     <Compile Include="When_Resolving_Subscriptions.cs" />
     <Compile Include="When_using_dynamics.cs" />
