--- a/MemBus.Tests/MemBus.Tests.csproj
+++ b/MemBus.Tests/MemBus.Tests.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Frame\AssertExtensions.cs" />
     <Compile Include="Frame\Helpers.cs" />
+    <Compile Include="Help\Messages.cs" />
     <Compile Include="Help\MockSubscription.cs" />
     <Compile Include="Help\SampleClass.cs" />
     <Compile Include="Help\SimpleResolver.cs" />
