--- a/MemBus.Tests/MemBus.Tests.csproj
+++ b/MemBus.Tests/MemBus.Tests.csproj
@@ -49,13 +49,16 @@
     <Compile Include="Frame\Helpers.cs" />
     <Compile Include="Help\Messages.cs" />
     <Compile Include="Help\MockSubscription.cs" />
+    <Compile Include="Help\NamedSubscription.cs" />
     <Compile Include="Help\SampleClass.cs" />
     <Compile Include="Help\SimpleResolver.cs" />
+    <Compile Include="Help\TestShaper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Using_Abstract_Automaton.cs" />
     <Compile Include="Using_Composite_Subscription.cs" />
     <Compile Include="Using_disposable_method_subscription.cs" />
     <Compile Include="Using_Publish_Pipeline.cs" />
+    <Compile Include="Using_the_matroschka.cs" />
     <Compile Include="When_Resolving_Subscriptions.cs" />
     <Compile Include="When_using_dynamics.cs" />
     <Compile Include="When_using_the_bus.cs" />
