--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -34,9 +34,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -47,18 +45,19 @@
     <Compile Include="MessageObservable.cs" />
     <Compile Include="Messages\ExceptionOccurred.cs" />
     <Compile Include="Messages\PeriodPassed.cs" />
-    <Compile Include="PublishPipeline\FireAndForgetPublisher.cs" />
+    <Compile Include="PublishPipeline\ParallelNonBlockingPublisher.cs" />
     <Compile Include="PublishPipeline\IPublishPipelineMember.cs" />
     <Compile Include="ISubscription.cs" />
     <Compile Include="ISubscriptionResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PublishPipeline\ParallelPublisher.cs" />
+    <Compile Include="PublishPipeline\ParallelBlockingPublisher.cs" />
     <Compile Include="PublishPipeline\PublishPipeline.cs" />
     <Compile Include="PublishPipeline\PublishToken.cs" />
     <Compile Include="PublishPipeline\SequentialPublisher.cs" />
     <Compile Include="Setup\AdHocConfigurator.cs" />
     <Compile Include="Setup\BusSetup.cs" />
-    <Compile Include="Setup\Default.cs" />
+    <Compile Include="Setup\Conservative.cs" />
+    <Compile Include="Setup\RichClientFrontend.cs" />
     <Compile Include="Setup\IBusSetupConfigurator.cs" />
     <Compile Include="Setup\IConfigurableBus.cs" />
     <Compile Include="Subscribing\DisposableSubscription.cs" />
@@ -68,8 +67,10 @@
     <Compile Include="Subscribing\MethodInvocation.cs" />
     <Compile Include="Subscribing\ShapeToDispose.cs" />
     <Compile Include="Subscribing\ShapeToFilter.cs" />
+    <Compile Include="Subscribing\ShapeToUIDispatch.cs" />
     <Compile Include="Subscribing\SubscriptionMatroschkaFactory.cs" />
     <Compile Include="Subscribing\SubscriptionCustomizer.cs" />
+    <Compile Include="Subscribing\UiDispatchingSubscription.cs" />
     <Compile Include="Support\AbstractAutomaton.cs" />
     <Compile Include="Support\AbstractServices.cs" />
     <Compile Include="Support\AdHocAutomaton.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="Support\ReflectionExtensions.cs" />
     <Compile Include="Support\RespondExtension.cs" />
     <Compile Include="Support\Trigger.cs" />
+    <Compile Include="Support\UsefulExtensions.cs" />
     <Compile Include="TableBasedResolver.cs" />
   </ItemGroup>
   <ItemGroup />
