--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ISubscriptionResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublishPipeline\ParallelBlockingPublisher.cs" />
+    <Compile Include="PublishPipeline\PipelineProvider.cs" />
     <Compile Include="PublishPipeline\PublishPipeline.cs" />
     <Compile Include="PublishPipeline\PublishToken.cs" />
     <Compile Include="PublishPipeline\SequentialPublisher.cs" />
@@ -58,8 +59,10 @@
     <Compile Include="Setup\AsyncConfiguration.cs" />
     <Compile Include="Setup\BusSetup.cs" />
     <Compile Include="Setup\Conservative.cs" />
+    <Compile Include="Setup\IConfigurablePublishing.cs" />
+    <Compile Include="Setup\MessageInfo.cs" />
     <Compile Include="Setup\RichClientFrontend.cs" />
-    <Compile Include="Setup\IBusSetupConfigurator.cs" />
+    <Compile Include="Setup\ISetupConfigurator.cs" />
     <Compile Include="Setup\IConfigurableBus.cs" />
     <Compile Include="Subscribing\DisposableSubscription.cs" />
     <Compile Include="Subscribing\FilteredSubscription.cs" />
