--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -64,15 +64,17 @@
     <Compile Include="Setup\RichClientFrontend.cs" />
     <Compile Include="Setup\ISetupConfigurator.cs" />
     <Compile Include="Setup\IConfigurableBus.cs" />
+    <Compile Include="Subscribing\ShapeProvider.cs" />
     <Compile Include="Subscribing\DisposableSubscription.cs" />
     <Compile Include="Subscribing\FilteredSubscription.cs" />
+    <Compile Include="Subscribing\IDenyShaper.cs" />
     <Compile Include="Subscribing\ISubscriptionCustomizer.cs" />
     <Compile Include="Subscribing\ISubscriptionShaper.cs" />
     <Compile Include="Subscribing\MethodInvocation.cs" />
     <Compile Include="Subscribing\ShapeToDispose.cs" />
     <Compile Include="Subscribing\ShapeToFilter.cs" />
     <Compile Include="Subscribing\ShapeToUIDispatch.cs" />
-    <Compile Include="Subscribing\SubscriptionMatroschkaFactory.cs" />
+    <Compile Include="Subscribing\SubscriptionMatroschka.cs" />
     <Compile Include="Subscribing\SubscriptionCustomizer.cs" />
     <Compile Include="Subscribing\UiDispatchingSubscription.cs" />
     <Compile Include="Support\AbstractAutomaton.cs" />
