--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Setup\BusSetup.cs" />
     <Compile Include="Setup\Conservative.cs" />
     <Compile Include="Setup\IConfigurablePublishing.cs" />
+    <Compile Include="Setup\IConfigurableSubscribing.cs" />
     <Compile Include="Setup\MessageInfo.cs" />
     <Compile Include="Setup\RichClientFrontend.cs" />
     <Compile Include="Setup\ISetupConfigurator.cs" />
@@ -92,7 +93,9 @@
     <Compile Include="Support\UsefulExtensions.cs" />
     <Compile Include="TableBasedResolver.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Configurators\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
