--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -45,16 +45,16 @@
     <Compile Include="MessageObservable.cs" />
     <Compile Include="Messages\ExceptionOccurred.cs" />
     <Compile Include="Messages\PeriodPassed.cs" />
-    <Compile Include="PublishPipeline\ParallelNonBlockingPublisher.cs" />
-    <Compile Include="PublishPipeline\IPublishPipelineMember.cs" />
+    <Compile Include="Publishing\ParallelNonBlockingPublisher.cs" />
+    <Compile Include="Publishing\IPublishPipelineMember.cs" />
     <Compile Include="ISubscription.cs" />
     <Compile Include="ISubscriptionResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PublishPipeline\ParallelBlockingPublisher.cs" />
-    <Compile Include="PublishPipeline\PipelineProvider.cs" />
-    <Compile Include="PublishPipeline\PublishPipeline.cs" />
-    <Compile Include="PublishPipeline\PublishToken.cs" />
-    <Compile Include="PublishPipeline\SequentialPublisher.cs" />
+    <Compile Include="Publishing\ParallelBlockingPublisher.cs" />
+    <Compile Include="Publishing\PipelineProvider.cs" />
+    <Compile Include="Publishing\PublishPipeline.cs" />
+    <Compile Include="Publishing\PublishToken.cs" />
+    <Compile Include="Publishing\SequentialPublisher.cs" />
     <Compile Include="Setup\AdHocConfigurator.cs" />
     <Compile Include="Configurators\AsyncConfiguration.cs" />
     <Compile Include="Setup\BusSetup.cs" />
