Buses are disposable. Introduction of child buses

--- a/MemBus.Tests/MemBus.Tests.csproj
+++ b/MemBus.Tests/MemBus.Tests.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Frame\PublishPipelineTester.cs" />
     <Compile Include="When_subscribing.cs" />
+    <Compile Include="When_using_disposable_buses.cs" />
     <Compile Include="When_using_the_bus_in_the_ui.cs" />
     <Compile Include="Frame\AssertExtensions.cs" />
     <Compile Include="Frame\Helpers.cs" />
