--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -33,6 +33,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Practices.ServiceLocation">
+      <HintPath>..\lib\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
@@ -41,6 +44,8 @@
     <Compile Include="Bus.cs" />
     <Compile Include="CompositeResolver.cs" />
     <Compile Include="CompositeSubscription.cs" />
+    <Compile Include="Configurators\ServiceLocatorSupport.cs" />
+    <Compile Include="Handles.cs" />
     <Compile Include="IBus.cs" />
     <Compile Include="IHandles.cs" />
     <Compile Include="MessageObservable.cs" />
@@ -57,6 +62,7 @@
     <Compile Include="Publishing\PublishPipeline.cs" />
     <Compile Include="Publishing\PublishToken.cs" />
     <Compile Include="Publishing\SequentialPublisher.cs" />
+    <Compile Include="ServiceLocationBasedResolver.cs" />
     <Compile Include="Setup\AdHocConfigurator.cs" />
     <Compile Include="Configurators\AsyncConfiguration.cs" />
     <Compile Include="Setup\BusSetup.cs" />
