--- a/Membus.Reactive.Tests/Membus.Reactive.Tests.csproj
+++ b/Membus.Reactive.Tests/Membus.Reactive.Tests.csproj
@@ -5,14 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1EC6C146-3F52-4BFB-8123-999743BEC991}</ProjectGuid>
+    <ProjectGuid>{C20EBE21-CC17-4A53-ADAF-6C4EE8D09A37}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MemBus.Tests</RootNamespace>
-    <AssemblyName>MemBus.Tests</AssemblyName>
+    <RootNamespace>Membus.Reactive.Tests</RootNamespace>
+    <AssemblyName>Membus.Reactive.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,43 +31,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Moq">
-      <HintPath>..\lib\Moq.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.CoreEx, Version=1.0.2617.104, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\System.CoreEx.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive, Version=1.0.2617.104, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\System.Reactive.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\TestAids\AssertExtensions.cs">
-      <Link>Frame\AssertExtensions.cs</Link>
+      <Link>Help\AssertExtensions.cs</Link>
     </Compile>
-    <Compile Include="Frame\PublishPipelineTester.cs" />
-    <Compile Include="When_subscribing.cs" />
-    <Compile Include="When_using_disposable_buses.cs" />
-    <Compile Include="When_using_the_bus_in_the_ui.cs" />
-    <Compile Include="Frame\Helpers.cs" />
-    <Compile Include="Help\Messages.cs" />
-    <Compile Include="Help\MockSubscription.cs" />
-    <Compile Include="Help\NamedSubscription.cs" />
-    <Compile Include="Help\SampleClass.cs" />
-    <Compile Include="Help\SimpleResolver.cs" />
-    <Compile Include="Help\TestShaper.cs" />
+    <Compile Include="When_MemBus_is_used_as_Observable.cs" />
+    <Compile Include="Help\MessageA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Using_Abstract_Automaton.cs" />
-    <Compile Include="Using_Composite_Subscription.cs" />
-    <Compile Include="Using_disposable_method_subscription.cs" />
-    <Compile Include="Using_Publish_Pipeline.cs" />
-    <Compile Include="Using_subscription_shapes.cs" />
-    <Compile Include="When_Resolving_Subscriptions.cs" />
-    <Compile Include="When_using_dynamics.cs" />
-    <Compile Include="When_using_the_bus.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MemBus\MemBus.csproj">
