--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Messages\ExceptionOccurred.cs" />
     <Compile Include="Messages\PeriodPassed.cs" />
     <Compile Include="NullBus.cs" />
+    <Compile Include="Publishing\FireAndForgetPublisher.cs" />
     <Compile Include="Publishing\ParallelNonBlockingPublisher.cs" />
     <Compile Include="Publishing\IPublishPipelineMember.cs" />
     <Compile Include="ISubscription.cs" />
@@ -104,6 +105,7 @@
     <Compile Include="Support\RespondExtension.cs" />
     <Compile Include="Support\Trigger.cs" />
     <Compile Include="Support\UsefulExtensions.cs" />
+    <Compile Include="TableBasedContravariantResolver.cs" />
     <Compile Include="TableBasedResolver.cs" />
   </ItemGroup>
   <ItemGroup />
