--- a/Membus.WpfTwitterClient/Membus.WpfTwitterClient.csproj
+++ b/Membus.WpfTwitterClient/Membus.WpfTwitterClient.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{3F778423-7761-4BF3-8A0D-241374FDE18C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Membus.Tests.WpfClient</RootNamespace>
-    <AssemblyName>Membus.Tests.WpfClient</AssemblyName>
+    <RootNamespace>Membus.WpfTwitterClient</RootNamespace>
+    <AssemblyName>Membus.WpfTwitterClient</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -58,6 +58,7 @@
       <HintPath>..\lib\WpfApp\StructureMap.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.CoreEx, Version=1.0.2617.104, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\System.CoreEx.dll</HintPath>
@@ -72,6 +73,7 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Xml" />
     <Reference Include="Twitterizer.Data">
       <HintPath>..\lib\WpfApp\Twitterizer.Data.dll</HintPath>
     </Reference>
@@ -89,6 +91,9 @@
     </ApplicationDefinition>
     <Compile Include="ClientPublishingConventions.cs" />
     <Compile Include="ClientRegistry.cs" />
+    <Compile Include="Frame\BaseConfigurationSection.cs" />
+    <Compile Include="Frame\ConfigReader.cs" />
+    <Compile Include="Frame\TwitterKeys.cs" />
     <Compile Include="Messages\Transport.cs" />
     <Compile Include="ServiceLocator.cs" />
     <Compile Include="Twitter\TwitterFacade.cs" />
