--- a/MemBus.Tests/MemBus.Tests.csproj
+++ b/MemBus.Tests/MemBus.Tests.csproj
@@ -49,8 +49,12 @@
     <Compile Include="..\TestAids\AssertExtensions.cs">
       <Link>Frame\AssertExtensions.cs</Link>
     </Compile>
+    <Compile Include="Cloning_a_bus.cs" />
     <Compile Include="Documentation_tests.cs" />
     <Compile Include="Frame\PublishPipelineTester.cs" />
+    <Compile Include="Help\BusSetupPutShapeOnMsgA.cs" />
+    <Compile Include="Help\BusSetupWithDefaultShape.cs" />
+    <Compile Include="Help\BusSetupWithTestShapers.cs" />
     <Compile Include="When_subscribing.cs" />
     <Compile Include="When_using_disposable_buses.cs" />
     <Compile Include="When_using_the_bus_in_the_ui.cs" />
