--- a/Membus.WpfTwitterClient/Membus.WpfTwitterClient.csproj
+++ b/Membus.WpfTwitterClient/Membus.WpfTwitterClient.csproj
@@ -103,11 +103,12 @@
     <Compile Include="Frame\Twitter\ITwitterSession.cs" />
     <Compile Include="Frame\UI\ApplicationActivityMessage.cs" />
     <Compile Include="Frame\UI\BoolToVisibilityConverter.cs" />
-    <Compile Include="Frame\UI\BusyAdorner.cs" />
+    <Compile Include="Frame\UI\FadeInOutBehaviour.cs" />
     <Compile Include="Frame\UI\GifImage.cs" />
     <Compile Include="Frame\UI\RequestToActivateScreen.cs" />
     <Compile Include="Frame\UI\ScreenConstructor.cs" />
     <Compile Include="Frame\UI\SingleAttribute.cs" />
+    <Compile Include="Frame\UI\Visibl.cs" />
     <Compile Include="GatherAccessToken\GetAccessTokenView.xaml.cs">
       <DependentUpon>GetAccessTokenView.xaml</DependentUpon>
     </Compile>
